# RealTime-PersianNews-Sentiment-LLM

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  scrapy.cfg
config/: prompt_template.txt  settings.yaml
preprocessing/: clean_text.py  run_cleaning.py
scheduler/: scrapy_scheduler.py  spider_runner.py  write_last_timestamp.py
scrapy_app/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_app/scrapy_app/: items.py  settings.py
scrapy_app/scrapy_app/spiders/: isna.py  khabaronline.py  mashreghnews.py  mehrnews.py  tarafdari.py
scrapy_app/spiders/: base_spider.py  isna.py  khabaronline.py  mashreghnews.py  mehrnews.py  tarafdari.py
sentiment_engine/: base.py  engine.py  gemini_client.py  ollama_client.py
streamlit_app/: dashboard.py
streamlit_app/services/: data_loader.py
utils/: config_manager.py  date_parser.py  logger.py  rabbitmq.py  sanitize_filename.py
workers/: preprocess_worker.py  sentiment_worker.py
